--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@hookform/resolvers": "^3.9.0",
     "bootstrap": "^5.3.3",
     "leaflet": "^1.9.4",
-    "next": "14.2.4",
+    "next": "^14.2.5",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
-    "react-leaflet": "^4.2.1"
+    "react-hook-form": "^7.52.1",
+    "react-leaflet": "^4.2.1",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.12",
