--- a/package.json
+++ b/package.json
@@ -1,38 +1,8 @@
 {
-  "type": "module",
-  "name": "shipping-project",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.5.2",
-    "@fortawesome/free-solid-svg-icons": "^6.5.2",
-    "@fortawesome/react-fontawesome": "^0.2.2",
-    "@hookform/resolvers": "^3.9.0",
-    "bootstrap": "^5.3.3",
-    "leaflet": "^1.9.4",
-    "next": "^14.2.5",
-    "react": "^18.3.1",
-    "react-bootstrap": "^2.10.4",
-    "react-dom": "^18.3.1",
-    "react-hook-form": "^7.52.1",
-    "react-leaflet": "^4.2.1",
-    "yup": "^1.4.0"
+    "@prisma/client": "^5.18.0"
   },
   "devDependencies": {
-    "@types/leaflet": "^1.9.12",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.4",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "prisma": "^5.18.0"
   }
 }
