--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,8 @@
     "axios": "^1.7.4",
     "bootstrap": "^5.3.3",
     "leaflet": "^1.9.4",
+    "leaflet-ant-path": "^1.3.0",
+    "leaflet.geodesic": "^2.7.1",
     "next": "^14.2.5",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
