--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,8 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
     "react-leaflet": "^4.2.1",
+    "sweetalert2": "^11.14.0",
+    "turf-overlaps": "^1.0.3",
     "yup": "^1.4.0"
   },
   "devDependencies": {
