--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ services:
       NODE_ENV: development  # Set to development for hot-reloading
     command: npm run dev  # Use nodemon to watch for changes
     container_name: backend
+    networks:
+      - app-network
 
   db:
     image: postgres:13
@@ -22,7 +24,6 @@ services:
       - "5432:5432"
     volumes:
       - pgdata:/var/lib/postgresql/data
-      - ./backend/docker_db_initialize:/docker-entrypoint-initdb.d
     env_file:
       - .env
     environment:
@@ -30,6 +31,8 @@ services:
       POSTGRES_PASSWORD: ${DB_PASSWORD}
       POSTGRES_DB: shipping_db
     container_name: shipping_db
+    networks:
+      - app-network
 
   frontend:
     build: ./frontend
@@ -44,6 +47,12 @@ services:
       NODE_ENV: development  # Set to development for hot-reloading
     command: npm run dev  # Use `npm run dev` for Next.js in development mode
     container_name: frontend
+    networks:
+      - app-network
 
 volumes:
   pgdata:
+
+networks:
+  app-network:
+    driver: bridge
