--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
     "@prisma/client": "^5.18.0"
   },
   "devDependencies": {
-    "prisma": "^5.18.0"
+    "prisma": "^5.18.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.2"
   }
 }
