--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,10 +1,11 @@
 services:
   backend:
-    build: ./backend
+    build: .
     ports:
       - "4000:4000"
+      - "5555:5555"
     volumes:
-      - ./backend:/app   # Bind mount for hot-reloading
+      - /app   # Bind mount for hot-reloading
       - /app/node_modules  # Ensure node_modules is not overwritten
     depends_on:
       - db
@@ -35,11 +36,11 @@ services:
       - app-network
 
   frontend:
-    build: ./frontend
+    build: ../frontend
     ports:
       - "3000:3000"
     volumes:
-      - ./frontend:/app  # Bind mount for hot-reloading
+      - ../frontend:/app  # Bind mount for hot-reloading
       - /app/node_modules  # Ensure node_modules is not overwritten
     depends_on:
       - backend
