--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
     "react-leaflet": "^4.2.1",
+    "sharp": "^0.33.5",
     "sweetalert2": "^11.14.1",
     "turf-overlaps": "^1.0.3",
     "yup": "^1.4.0"
