--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,6 @@
     "leaflet": "^1.9.4",
     "leaflet-ant-path": "^1.3.0",
     "leaflet.geodesic": "^2.7.1",
-    "next": "^14.2.5",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
@@ -33,15 +32,19 @@
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.25.2",
+    "@babel/eslint-parser": "^7.25.1",
     "@babel/preset-env": "^7.25.4",
     "@babel/preset-react": "^7.24.7",
     "@types/leaflet": "^1.9.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "babel-loader": "^9.2.1",
     "babel-preset-next": "^1.4.0",
     "eslint": "^8.57.1",
-    "eslint-config-next": "^14.2.4",
+    "eslint-config-next": "^14.2.13",
+    "next": "^14.2.13",
     "nodemon": "^3.1.4",
     "postcss": "^8",
     "typescript": "^5"
