--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -1,22 +1,3 @@
 {
-  "parser": "@babel/eslint-parser",
-  "parserOptions": {
-    "requireConfigFile": false,
-    "ecmaVersion": 2020,
-    "sourceType": "module"
-  },
-  "extends": ["next/babel","next/core-web-vitals"],
-  "rules": {
-  },
-  "overrides": [
-    {
-      "files": ["*.mjs"],
-      "parser": "@babel/eslint-parser",
-      "parserOptions": {
-        "requireConfigFile": false,
-        "ecmaVersion": 2020,
-        "sourceType": "module"
-      }
-    }
-  ]
+  "extends": ["next/babel","next/core-web-vitals"]
 }
