--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@turf/turf": "^7.1.0",
     "axios": "^1.7.4",
     "bootstrap": "^5.3.3",
+    "dotenv": "^16.4.5",
     "leaflet": "^1.9.4",
     "leaflet-ant-path": "^1.3.0",
     "leaflet.geodesic": "^2.7.1",
